# RARity

./: DESCRIPTION  NAMESPACE  README.md
R/: extendr-wrappers.R
man/: rarity-package.Rd  rarity.Rd  set_blocks_per_chunk.Rd  set_log_level.Rd  set_min_sum.Rd  set_num_threads.Rd
src/: .gitignore  Makevars  Makevars.win  entrypoint.c  rarity-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
