[package]
name = "rarity"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[lib]
crate-type = ["staticlib"]
# name = "rarity"

[dependencies]
extendr-api = "0.6.0"
rayon = "1.10.0"
# lmutils = { version = "0.1", path = "../../../../lmutils" }
# lmutils = "0.1"
log = "0.4.21"
env_logger = "0.11.3"
lmutils = { git = "https://github.com/mrvillage/lmutils.git" }
core_affinity = "0.8.1"
